- Make redirection to the new page - Fix menu length problem on firefox

--- a/page/assets/styles/partials/_menu.scss
+++ b/page/assets/styles/partials/_menu.scss
@@ -177,7 +177,7 @@
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 0.09em;
-    padding: 0 21px;
+    padding: 0 20px;
     line-height: 48px;
     font-weight: bold;
     font-size: $menuSize;
